탈퇴 및 인기순위 구현
- 탈퇴: 사용자 ID로 리뷰, 북마크를 찾아서 제품의 리뷰수, 북마크수를 감소하고 탈퇴
- 인기순위: 리뷰수, 북마크수를 고려하여 순위를 매김. 전체 순위와 사용자 유형 순위를 반환